--- a/app/src/main/res/layout/message_outgoing.xml
+++ b/app/src/main/res/layout/message_outgoing.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
         android:layout_toLeftOf="@+id/ivProfileMe"
-        android:background="@drawable/ic_launcher_background"
+        android:background="@drawable/message_out"
         android:elevation="2dp"
         android:padding="8dp"
         android:text="Your outgoing message here"
